--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
-    "baseUrl": "./",
     "moduleResolution": "node",
+    "baseUrl": "./",
     "paths": {
       "@/*": [
         "src/*"
@@ -14,6 +14,15 @@
       "dom",
       "dom.iterable",
       "scripthost"
+    ],
+    
+  },
+  "exclude":["node_modules","dist"],
+  "vueCompilerOptions": {
+    "targer":2.7,
+    "experimentalDisableTemplateSupport": true,
+    "extensions": [
+      ".vue"
     ]
   }
 }
